ff layout issue fixed

--- a/src/client/assets/styles/layout.scss
+++ b/src/client/assets/styles/layout.scss
@@ -2,13 +2,12 @@
 
 html,
 body {
-    @include flex-parent(column, nowrap);
-    @include flex-child(1, 1);
     width: 100%;
     height: 100%;
 }
 
 body {
+    @include flex-parent(column, nowrap);
     margin: 0;
     padding: 0;
     background: rgba(255, 255, 255, 1);
